Ajout des dossiers backend et frontend avec corrections des erreurs